# django-bolt

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  pyproject.toml
bench/: BENCHMARK_BASELINE.md  BENCHMARK_DEV.md
docs/: zensical.toml
docs/src/ref/: settings.md
docs/src/topics/: class-based-views.md  media-files.md  routing.md  static-files.md
python/bolt-mcp/tests/integration/: test_mcp_server_integration.py
python/django_bolt/: api.py  decorators.py  serialization.py  typing.py  urls.py
python/django_bolt/admin/: static.py
python/django_bolt/management/commands/: runbolt.py
python/django_bolt/openapi/: schema_generator.py
python/django_bolt/serializers/: base.py
python/example/: .gitignore
python/example/missions/: api.py
python/example/missions/templates/missions/: dashboard.html
python/example/static/bench/: asset_100k.js  asset_1k.css
python/example/testproject/: api.py  settings.py  urls.py
python/tests/: test_django_middleware_integration.py  test_fresh_install.py  test_openapi_nested_schema.py  test_openapi_schema_accuracy.py  test_openapi_spec_validity.py  test_static_files.py  test_type_coercion_security.py  test_union_response.py  test_url_reverse.py
python/tests/admin_tests/: test_admin_with_django.py
python/tests/integration/: test_max_param_length_env_server_integration.py  test_media_server_integration.py  test_static_server_integration.py  test_union_response_server_integration.py  test_url_reverse_server_integration.py  test_websocket_param_length_server_integration.py
python/tests/websockets/: test_websocket_security.py
scripts/: benchmark.sh
src/: form_parsing.rs  handler.rs  request_pipeline.rs  server.rs  state.rs  static_files.rs  testing.rs  type_coercion.rs
src/websocket/: handler.rs
