[package]
name = "django-bolt"
version = "0.8.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "django_bolt"
crate-type = ["cdylib"]

[features]
default = ["mimalloc"]
# Memory allocator options (mutually exclusive - mimalloc is default)
# Use jemalloc for sustained loads with lower fragmentation
# Use mimalloc for short-lived objects (often faster)
jemalloc = ["dep:tikv-jemallocator"]
mimalloc = ["dep:mimalloc"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py312"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
actix-web = { version = "4", features = ["compress-gzip", "compress-brotli", "compress-zstd", "cookies"] }
cookie = "0.18"  # RFC 6265 compliant cookie handling
actix-http = "3"
actix-cors = "0.7"
actix-web-actors = "4"  # WebSocket support
actix = "0.13"  # Actor framework for WebSocket
actix-files = "0.6"
tokio = { version = "1", features = ["full"] }
socket2 = { version = "0.6", features = ["all"] }
matchit = "0.9"
# Middleware dependencies
governor = "0.10"  # Rate limiting
jsonwebtoken = { version = "10", features = ["rust_crypto"] }  # JWT authentication
dashmap = "6"  # Fast concurrent hashmap for rate limiting
parking_lot = "0.12"  # Fast RwLock for shared state
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ahash = "0.8"
# Memory allocators (optional features)
mimalloc = { version = "0.1", default-features = false, optional = true }
tikv-jemallocator = { version = "0.6", optional = true }
urlencoding = "2"
once_cell = "1"
futures-util = "0.3"
bytes = "1"
brotli = "8"
flate2 = "1"
zstd = "0.13"
regex = "1"
# Type coercion dependencies (for path/query param parsing)
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
# Form parsing dependencies
actix-multipart = "0.7"
serde_urlencoded = "0.7"
tempfile = "3"
log = "0.4"
notify = "6"
ctrlc = "3"
libc = "0.2"

[profile.release]
codegen-units = 1        # Better optimization (single codegen unit allows more inlining)
debug = false            # No debug symbols in release
incremental = false      # Disable incremental compilation for release
lto = "fat"              # Full Link-Time Optimization (slower build, faster binary)
opt-level = 3            # Maximum optimization level
panic = "abort"          # Smaller binary, no unwinding overhead
strip = true             # Remove symbols from binary

# Profile for profiling (release with debug info)
[profile.profiling]
inherits = "release"
debug = true             # Enable debug symbols for profiling
strip = false            # Keep symbols for profilers
